--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,18 +1,21 @@
 nav{
+    position: absolute;
     display: flex ;
     width: 100%;
-    max-height: 40px;
+    max-height: 50px;
     align-items: center;
     justify-content: space-around;
-    background-color:#16161a;
+    background-color:#121414;
     border-bottom: 1px solid #2cb67d ;
     padding: 20px;
+    z-index: 99;
 }
 
 nav h4{
     margin-left: -200px;
     font-style: italic;
     font-weight: normal;
+    letter-spacing: 2px;
     font-size: 20px;
     text-shadow: -1px 0px 3px #2cb67d;
 }
@@ -30,19 +33,41 @@ ul li a{
     color: white;
 }
 
-.sobre{
+.slogan, .servicos, .sobre{
     display: flex;
     align-items: center;
     width: 100%;
-    height: 91.8vh;
+    height: 100vh;
     padding: 10px 0 ;
-    background-color: #16161a;
+    background-color: #121414;
     color: #fff;
 }
-.sobre-descricao{
+.sobre{
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+}
+.sobre h2{
+    position: absolute;
+    top: 20px;
+    letter-spacing: 3px;
+    margin: auto;
+    text-align: center;
+}
+.biografia{
+    border: 1px solid #2cb67d;
+    box-shadow: -1px 1px 3px #2cb67d;
+    border-radius: 10px;
+    height: auto;
+    width: 40%;
+    font-size: 20px;
+    padding: 20px;
+}
+.slogan-descricao{
     width: 50%;
     height: 30%;
     padding: 20px;
+    padding-left: 50px;
     margin-top: -100px;
     font-size: 1.6rem;
     display: flex;
@@ -50,7 +75,18 @@ ul li a{
     align-items: center;
     gap: 20px;
 }
+.slogan-descricao p{
+    padding: 20px;
+    background-color: #141617;
+    border-radius: 10px;
+}
+.barbeiros{
+    font-style: italic;
+    padding: 10px;
+    color: #121414;
+    text-shadow: 1px 1px 3px #2cb67d;
 
+}
 .btn-descer{
     display: flex;
     align-items: center;
@@ -72,7 +108,7 @@ ul li a{
 .img{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     max-width: 50%;
     max-height: 70%;
     min-height: 50%;
@@ -80,4 +116,89 @@ ul li a{
 .img img{
     height: 100%;
     width:  70%;
+    -webkit-mask-image: linear-gradient(to top, transparent -1%, black 80%);
+
+}
+
+.servicos{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.servicos h2{
+    letter-spacing: 5px;
+}
+
+.container-servicos{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 90%;
+    gap: 10px;
+}
+
+.servico{
+    width: 25%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #202324;
+    border-radius: 10px;
+    color: #ffffffe0;
+}
+.img-servico{
+    object-fit: cover;
+    background-image: linear-gradient(to bottom, transparent 0%, gray 70%);
+    -webkit-mask-image: linear-gradient(to top, transparent -1%, black 80%);
+}
+
+.img-servico img {
+    height: 100%;
+    width: 100%;
+}
+
+.informacoes ul{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    margin-top: -20px;
+}
+
+.btn-agendar{
+    border: 1px solid #2cb67d;
+    border-radius: 10px;
+    background-color: #121414;
+    color: #fff;
+    cursor: pointer;
+    padding: 3px;
+    transition: .5s;
+
+}
+.btn-agendar:hover{
+    scale: 1.1;
+}
+
+.btn-contatos{
+    display: flex;
+    position: fixed;
+    top: 90%;
+    left: 90%;
+    z-index: 999;
+    background: #2cb67d;
+    border-radius: 50%;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.btn-contatos:hover{
+    scale: 1.1;
+    color: #fff;
 }
