--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,19 @@
     <nav class="navbar">
         <h4>Barbeiros</h4>
         <ul>
-            <li><a href="#">serviços</a></li>
-            <li><a href="#">sobre nós</a></li>
-            <li><a href="#">contatos</a></li>
+            <li><a href="#servicos">serviços</a></li>
+            <li><a href="#sobre">sobre nós</a></li>
+            <li><a href="#">Redes Sociais</a></li>
         </ul>
     </nav>
-    <section class="sobre">
-        <div class="sobre-descricao">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis dolores sint pariatur alias voluptates voluptas earum laboriosam neque ad at, soluta animi laudantium ipsam. 
-            <br> Molestias rerum vel ratione laboriosam illum!</p>
+    
+    <section class="slogan">
+        <div class="slogan-descricao">
+            <p>Não é só um corte de cabelo, é a sua alto estima de volta ! <br>
+                Nós da <span class="barbeiros">Barbeiros</span> trabalhamos com os melhores produtos <br>
+                e profissionais especializados em inovações estéticas. <br>
+                Conheça nossos serviços e agende uma visita !
+            </p>
             <button class="btn-descer"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
                 </svg>
@@ -20,4 +24,112 @@
             <img src="http://localhost:4200/assets/imgs/45.png" alt="imagem-tesoura">
         </div>
     </section>
+    <section id="servicos" class="servicos">
+        
+        <h2>serviços</h2>
+     
+        <div class="container-servicos">
+            
+            <div class="servico">
+                <div class="img-servico">
+                    <img src="http://localhost:4200/assets/imgs/cabelo2.png" alt="">
+                </div>
+                <div class="informacoes">
+                    <ul>
+                        <li><strong>Corte de Cabelo na Tesoura</strong></li>
+                        <li> <strong>Duração</strong>: 1hr</li>
+                        <li><strong>Preço</strong>: 50</li>
+                    </ul>
+                </div>
+                <button class="btn-agendar">Agendar</button>
+            </div>
+            <div class="servico">
+                <div class="img-servico">
+                    <img src="http://localhost:4200/assets/imgs/bigode.png" alt="">
+                </div>
+                <div class="informacoes">
+                    <ul>
+                        <li><strong>Cabelo e Barba</strong></li>
+                        <li> <strong>Duração</strong>: 1hr</li>
+                        <li><strong>Preço</strong>: 50</li>
+                    </ul>
+                </div>
+                <button class="btn-agendar">Agendar</button>
+
+            </div>
+            <div class="servico">
+                <div class="img-servico">
+                    <img src="http://localhost:4200/assets/imgs/cabelo3.png" alt="">
+                </div>
+                <div class="informacoes">
+                    <ul>
+                        <li><strong>Corte de Cabelo Máquina </strong></li>
+                        <li> <strong>Duração</strong>: 1hr</li>
+                        <li><strong>Preço</strong>: 50</li>
+                    </ul>
+                </div>
+                <button class="btn-agendar">Agendar</button>
+            </div>
+            <div class="servico">
+                <div class="img-servico">
+                    <img src="http://localhost:4200/assets/imgs/sobrancelha.png" alt="">
+                </div>
+                <div class="informacoes">
+                    <ul>
+                        <li><strong>Sobrancelha na Pinça</strong></li>
+                        <li> <strong>Duração</strong>: 1hr</li>
+                        <li><strong>Preço</strong>: 50</li>
+                    </ul>
+                </div>
+                <button class="btn-agendar">Agendar</button>
+
+            </div>
+            <div class="servico">
+                <div class="img-servico">
+                    <img src="http://localhost:4200/assets/imgs/cabelo-pintura.png" alt="">
+                </div>
+                <div class="informacoes">
+                    <ul>
+                        <li><strong>Tingimento</strong></li>
+                        <li> <strong>Duração</strong>: 1hr</li>
+                        <li><strong>Preço</strong>: 50</li>
+                    </ul>
+                </div>
+                <button class="btn-agendar">Agendar</button>
+            </div>
+            <div class="servico">
+                <div class="img-servico">
+                    <img src="http://localhost:4200/assets/imgs/corte-infantil.png" alt="">
+                </div>
+                <div class="informacoes">
+                    <ul>
+                        <li><strong>Corte Infantil</strong></li>
+                        <li> <strong>Duração</strong>: 1hr</li>
+                        <li><strong>Preço</strong>: 50</li>
+                    </ul>
+                </div>
+                <button class="btn-agendar">Agendar</button>
+
+            </div>
+            
+            
+        </div>
+        
+    </section>
+    <section id="sobre" class="sobre">
+        <h2>Sobre <img height="20px" src="http://localhost:4200/assets/imgs/tesoura.gif" alt=""></h2>
+        <div class="biografia">
+            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Eligendi, iure dolores magni ratione tempora asperiores,<br>
+                 beatae perspiciatis assumenda veritatis culpa odit officiis vero, itaque quas temporibus ut? Soluta, incidunt eaque.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam consequuntur aliquid culpa, delectus reprehenderit, tempora distinctio, quisquam natus modi atque mollitia rem magni facere laborum eaque nulla esse perferendis officia.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni facilis error officiis, dolorum rerum porro maiores aspernatur aperiam unde, eum, vero perspiciatis quo eius laboriosam reprehenderit ex dolor dolore similique.
+            </p>
+        </div>
+    </section>
+    <button class="btn-contatos">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+            <path d="M13.601 2.326A7.85 7.85 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.9 7.9 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.9 7.9 0 0 0 13.6 2.326zM7.994 14.521a6.6 6.6 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.56 6.56 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592m3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.73.73 0 0 0-.529.247c-.182.198-.691.677-.691 1.654s.71 1.916.81 2.049c.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232"/>
+        </svg>
+    </button>
 </main>
