arquivos de imagens

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
             </button>
         </div>
         <div class="img">
-            <img src="http://localhost:4200/assets/imgs/45.png" alt="imagem-tesoura">
+            <img src="assets/imgs/45.png" alt="imagem-tesoura">
         </div>
     </section>
     <section id="servicos" class="servicos">
@@ -32,7 +32,7 @@
             
             <div class="servico">
                 <div class="img-servico">
-                    <img src="http://localhost:4200/assets/imgs/cabelo2.png" alt="">
+                    <img src="assets/imgs/cabelo2.png" alt="">
                 </div>
                 <div class="informacoes">
                     <ul>
@@ -45,7 +45,7 @@
             </div>
             <div class="servico">
                 <div class="img-servico">
-                    <img src="http://localhost:4200/assets/imgs/bigode.png" alt="">
+                    <img src="assets/imgs/bigode.png" alt="">
                 </div>
                 <div class="informacoes">
                     <ul>
@@ -59,7 +59,7 @@
             </div>
             <div class="servico">
                 <div class="img-servico">
-                    <img src="http://localhost:4200/assets/imgs/cabelo3.png" alt="">
+                    <img src="assets/imgs/cabelo3.png" alt="">
                 </div>
                 <div class="informacoes">
                     <ul>
@@ -72,7 +72,7 @@
             </div>
             <div class="servico">
                 <div class="img-servico">
-                    <img src="http://localhost:4200/assets/imgs/sobrancelha.png" alt="">
+                    <img src="assets/imgs/sobrancelha.png" alt="">
                 </div>
                 <div class="informacoes">
                     <ul>
@@ -86,7 +86,7 @@
             </div>
             <div class="servico">
                 <div class="img-servico">
-                    <img src="http://localhost:4200/assets/imgs/cabelo-pintura.png" alt="">
+                    <img src="assets/imgs/cabelo-pintura.png" alt="">
                 </div>
                 <div class="informacoes">
                     <ul>
@@ -99,7 +99,7 @@
             </div>
             <div class="servico">
                 <div class="img-servico">
-                    <img src="http://localhost:4200/assets/imgs/corte-infantil.png" alt="">
+                    <img src="assets/imgs/corte-infantil.png" alt="">
                 </div>
                 <div class="informacoes">
                     <ul>
@@ -117,7 +117,7 @@
         
     </section>
     <section id="sobre" class="sobre">
-        <h2>Sobre <img height="20px" src="http://localhost:4200/assets/imgs/tesoura.gif" alt=""></h2>
+        <h2>Sobre <img height="20px" src="assets/imgs/tesoura.gif" alt=""></h2>
         <div class="biografia">
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Eligendi, iure dolores magni ratione tempora asperiores,<br>
