--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,26 +9,27 @@
     </nav>
     
     <section class="slogan">
-        <div class="slogan-descricao">
+        <div class="slogan-descricao animacao">
             <p>Não é só um corte de cabelo, é a sua alto estima de volta ! <br>
                 Nós da <span class="barbeiros">Barbeiros</span> trabalhamos com os melhores produtos <br>
                 e profissionais especializados em inovações estéticas. <br>
                 Conheça nossos serviços e agende uma visita !
             </p>
-            <button class="btn-descer"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
-                </svg>
+            <button   class="btn-descer">
+                <svg (click)="descer()" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
+                    </svg>
             </button>
         </div>
-        <div class="img">
+        <div class="img animacao">
             <img src="assets/imgs/45.png" alt="imagem-tesoura">
         </div>
     </section>
-    <section id="servicos" class="servicos">
+    <section #servicos id="servicos" class="servicos">
         
-        <h2>serviços</h2>
+        <h2 class="animacao">serviços</h2>
      
-        <div class="container-servicos">
+        <div class="container-servicos animacao">
             
             <div class="servico">
                 <div class="img-servico">
@@ -117,8 +118,8 @@
         
     </section>
     <section id="sobre" class="sobre">
-        <h2>Sobre <img height="20px" src="assets/imgs/tesoura.gif" alt=""></h2>
-        <div class="biografia">
+        <h2 class="animacao">Sobre <img height="20px" src="assets/imgs/tesoura.gif" alt=""></h2>
+        <div class="biografia animacao">
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Eligendi, iure dolores magni ratione tempora asperiores,<br>
                  beatae perspiciatis assumenda veritatis culpa odit officiis vero, itaque quas temporibus ut? Soluta, incidunt eaque.
