--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -41,7 +41,16 @@ ul li a{
     padding: 10px 0 ;
     background-color: #121414;
     color: #fff;
+    
 }
+
+.animacao{
+    animation: aparecer 1ms ease-in-out;
+    animation-timeline: view();
+    animation-range: cover 0% cover 50%;
+    transition: all .5s;
+}
+
 .sobre{
     position: relative;
     flex-direction: column;
@@ -201,4 +210,17 @@ ul li a{
 .btn-contatos:hover{
     scale: 1.1;
     color: #fff;
+}
+
+@keyframes aparecer{
+    from{
+        opacity: 0;
+        translate: -100vw 0;
+        filter: blur(15px);
+    }
+    to{
+        opacity: 1;
+        translate: 0 0;
+        filter: blur(0);
+    }
 }
