--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,7 +21,7 @@ nav h4{
 }
 
 ul{
-    width: 20%;
+    width: 30%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -36,18 +36,23 @@ ul li a{
 .slogan, .servicos, .sobre{
     display: flex;
     align-items: center;
+    justify-content: space-around;
     width: 100%;
     height: 100vh;
+    max-height: 100vh;
     padding: 10px 0 ;
     background-color: #121414;
     color: #fff;
-    
+    flex-wrap: nowrap;
 }
+
+
+
 
 .animacao{
     animation: aparecer 1ms ease-in-out;
     animation-timeline: view();
-    animation-range: cover 0% cover 50%;
+    animation-range: cover 0% cover 30%;
     transition: all .5s;
 }
 
@@ -67,10 +72,12 @@ ul li a{
     border: 1px solid #2cb67d;
     box-shadow: -1px 1px 3px #2cb67d;
     border-radius: 10px;
-    height: auto;
     width: 40%;
-    font-size: 20px;
+    font-size: 1rem;
     padding: 20px;
+    height: auto;
+    max-height: 70%;
+
 }
 .slogan-descricao{
     width: 50%;
@@ -118,9 +125,9 @@ ul li a{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    max-width: 50%;
-    max-height: 70%;
-    min-height: 50%;
+    min-width: 50%;
+    height: 70%;
+    min-height: 40%;
 }
 .img img{
     height: 100%;
@@ -151,7 +158,8 @@ ul li a{
 }
 
 .servico{
-    width: 25%;
+    width: 30%;
+    min-width: 25%;
     height: 300px;
     display: flex;
     flex-direction: column;
@@ -160,6 +168,7 @@ ul li a{
     background-color: #202324;
     border-radius: 10px;
     color: #ffffffe0;
+    text-align: center;
 }
 .img-servico{
     object-fit: cover;
@@ -222,5 +231,78 @@ ul li a{
         opacity: 1;
         translate: 0 0;
         filter: blur(0);
+    }
+}
+
+@media (max-width:760px){
+    nav h4{
+        justify-content: center;
+        margin: 0;
+    }
+    .slogan{
+        flex-flow: column-reverse;
+    }
+    .slogan-descricao{
+        margin-top: -200px;
+        font-size: 1rem;
+        justify-content: center;
+        text-overflow: ellipsis;
+    }
+    .img{
+        height: 20%;
+        width: 50%;
+        justify-content: center;
+        object-fit: cover;
+    }
+    .container-servicos{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0;
+        place-items: center;
+        overflow: auto;
+        width: 100%;
+    }
+    .servico{
+        display: flex;
+        width: 50%;
+        height: 30%;
+    }
+}
+@media (max-width:630px){
+    nav h4{
+        justify-content: center;
+        margin: 0;
+    }
+    ul {
+        width: 40%;
+    }
+    .slogan{
+        flex-flow: column-reverse;
+    }
+    .slogan-descricao{
+        margin-top: -200px;
+        font-size: 1rem;
+        justify-content: center;
+        text-overflow: ellipsis;
+        width: 70%;
+    }
+    .img{
+        height: 20%;
+        width: 80%;
+        justify-content: center;
+        object-fit: cover;
+    }
+    .container-servicos{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0;
+        place-items: center;
+        overflow: auto;
+        width: 100%;
+    }
+    .servico{
+        display: flex;
+        width: 50%;
+        height: 30%;
     }
 }
