--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,9 +13,9 @@
             <p>Não é só um corte de cabelo, é a sua alto estima de volta ! <br>
                 Nós da <span class="barbeiros">Barbeiros</span> trabalhamos com os melhores produtos <br>
                 e profissionais especializados em inovações estéticas. <br>
-                Conheça nossos serviços e agende uma visita !
+                Conheça nossos serviços abaixo e agende uma visita !
             </p>
-            <button   class="btn-descer">
+            <button (click)="descer()"   class="btn-descer">
                 <svg (click)="descer()" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1"/>
                     </svg>
