--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -120,11 +120,10 @@
     <section id="sobre" class="sobre">
         <h2 class="animacao">Sobre <img height="20px" src="assets/imgs/tesoura.gif" alt=""></h2>
         <div class="biografia animacao">
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Eligendi, iure dolores magni ratione tempora asperiores,<br>
-                 beatae perspiciatis assumenda veritatis culpa odit officiis vero, itaque quas temporibus ut? Soluta, incidunt eaque.
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam consequuntur aliquid culpa, delectus reprehenderit, tempora distinctio, quisquam natus modi atque mollitia rem magni facere laborum eaque nulla esse perferendis officia.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni facilis error officiis, dolorum rerum porro maiores aspernatur aperiam unde, eum, vero perspiciatis quo eius laboriosam reprehenderit ex dolor dolore similique.
+            <p> Estamos há 10 anos sendo referência no ramo da barbearia.
+                Localizado no bairro colinas da anhanguera - santana de parnaíba,a barbeiros conta 
+                com um ambiente climatizado, cadeiras confortáveis, televisão
+                e os mais variados serviços para melhor lhe atender.  
             </p>
         </div>
     </section>
